--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "chart.js": "^3.7.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
