--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "chart.js": "^3.7.0",
+    "chart.js": "2.8",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
-    "vue-chartjs": "^3.5.1",
+    "vue-chartjs": "^3.4.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
