--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.1",
+    "vue-infinite-loading": "^2.4.5",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
