--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "camelcase-keys": "^7.0.1",
     "chart.js": "2.9.4",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
