--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
+    "nuxt-webfontloader": "^1.1.0",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.1",
     "vue-infinite-loading": "^2.4.5",
